update: simplify the metadata retrieval and some code formatting