@@ -505,11 +505,15 @@ public class PlateService {
 			}
 
 			// Retrieve the metadata using the list of plate IDs
-			List<MetadataDTO> plateMetadataList = metadataServiceGraphQlClient.getMetadata(plateIds, ObjectClass.PLATE);
+			List<MetadataDTO> plateMetadataList = metadataServiceGraphQlClient
+					.getMetadata(plateIds, ObjectClass.PLATE);
+
 			for (MetadataDTO metadata : plateMetadataList) {
 				PlateDTO plate = plateMap.get(metadata.getObjectId());
 				if (plate != null) {
-					plate.setTags(metadata.getTags().stream().map(TagDTO::getTag).collect(Collectors.toList()));
+					plate.setTags(metadata.getTags().stream()
+							.map(TagDTO::getTag)
+							.toList());
 					List<PropertyDTO> propertyDTOs = new ArrayList<>(metadata.getProperties().size());
 					for (eu.openanalytics.phaedra.metadataservice.dto.PropertyDTO property : metadata.getProperties()) {
 						propertyDTOs.add(new PropertyDTO(property.getPropertyName(), property.getPropertyValue()));
